(add new changes on top of this file)

Änderungen
----------

v0.8.9 (??.07.2010)
 * All references to extensions lib/div removed.
 * PageBrowser: Respect maximum list limit.
 * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
 * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!

v0.8.8 (17.07.2010)
 * Avoid warnings for NumberFormat called with string values
 * new class tx_rnbase_maps_Util

v0.8.7 (05.07.2010) (not released)
 * tx_rnbase_util_Files::getFileResource() works in BE

v0.8.6 (03.07.2010)
 * prepareTSFE: timetrack init before tsfe
 * CharBrowser: new option to place special fields at last
 * PageBrowser: init link by Typoscript

v0.8.5 (29.06.2010) (not released)
 * ListBuilder: support for multiple list subparts in a single template

v0.8.4 (28.06.2010) (not released)
 * tx_rnbase_maps_google_Map: JS initialize fixed
 * tx_rnbase_maps_Coord: variables fixed
 * $_SERVER is included in error mail
 * Visitors for ListBuilder
 * New method tx_rnbase_util_Templates::getSubpartFromFile()

v0.8.3 (07.06.2010) (not released)
 * New marker ###.._TOTALLINE### in ListBuilder. It shows current line number of a large list with pagebrowser.
 * tx_rnbase_util_SearchBase: New option "callback" for doSelect

v0.8.2 (07.06.2010) (not released)
 * mod_Tables: getHeadline() uses title string as fallback
 * util_FormTool: new method getStoredRequestData()
 * tx_rnbase_util_DB: New option "callback" for doSelect

v0.8.1 (01.06.2010) (not released)
 * tx_rnbase_util_FormTool::createEditButton with confirm option
 * tx_rnbase_util_Link: new TS options noCache and noHash
 * SearchBase: Ignore invalid queries for SEARCH_FIELD_JOINED
 * tx_rnbase_util_DB: Bugfix for OP_LIKE with multiple strings. 
 * tx_rnbase_util_DB: New operator OP_LIKE_CONST.

v0.8.0 (11.05.2010)
 * Additional check for installed DAM in tx_rnbase_util_TSDAM
 * Current SITE_URL is included in error mail

v0.7.8 (02.05.2010) (not released)