@@ -8,6 +8,8 @@ v0.8.9 (??.07.2010)
  * PageBrowser: Respect maximum list limit.
  * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
  * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!
+ * Default file based cache can be activated in extension configuration.
+ * Action based caching interface for frontend plugins. Not finished yet!
 
 v0.8.8 (17.07.2010)
  * Avoid warnings for NumberFormat called with string values
